@@ -5,6 +5,7 @@ import com.growit.app.todo.domain.ToDoRepository;
 import java.time.LocalDate;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 public class FakeToDoRepository implements ToDoRepository {
   private final Map<String, List<ToDo>> store = new ConcurrentHashMap<>();
@@ -63,8 +64,10 @@ public class FakeToDoRepository implements ToDoRepository {
   }
 
   @Override
-  public List<ToDo> findByUserIdQuery(String userId, LocalDate today) {
-    return List.of();
+  public List<ToDo> findByUserIdAndDate(String userId, LocalDate today) {
+    return store.getOrDefault(userId, Collections.emptyList()).stream()
+        .filter(todo -> todo.getDate().equals(today))
+        .collect(Collectors.toList());
   }
 
   public void clear() {
